# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.564 2006/01/06 04:39:05 codeman Exp $

*GLI-0.3 (27 Oct 2005)

  5 Jan 2006; Preston Cody <codeman@gentoo.org>
  AT: bootsplash is now gensplash
  gliserv: add advanced_mode to shared_info
  webgli: Added advanced mode.  mostly just disables a few screens.
  
  2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  get_deps() calls 'emerge -p' and then removed packages that aren't in vdb
  added emerge()
  update sub-progress after each package is emerged
  skip tar, symlink fixup, and copy from image dir to / if no files in CONTENTS
  call get_best_version_vdb() instead of get_best_version_vdb_chroot()
  remove link if it exists before moving content into place
  src/GLIArchitectureTemplate.py:
  install_packages() now calls emerge() in GLIPortage
  change all calls to self._emerge() to self._portage.emerge()
  comment out all emerge status checking...using exceptions now
  call copy_pkg_to_chroot() directly for livecd-kernel

  31 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  remove add_pkg_to_world() and copy_pkg_to_chroot()
  copy installer.log to installer.log.failed on install failure
  src/GLIUtility.py:
  added get_keymaps()
  spawn() takes any False argument for chroot instead of just None
  src/GLIPortage.py:
  copy_pkg_to_chroot() chroot's to run ebuild is use_root=False
  change copy_pkg_to_chroot() to work properly with use_root=False
  figure PORTAGE_TMPDIR properly

  27 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/html/*:
  converted showclients, load/saveprofile

  26 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  exclude packages already in chroot vdb from binary deplist
  chroot to use best_version for chroot's vdb
  src/runtimedeps.py:
  accept ROOT via commandline instead of env
