@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIPortage.py,v 1.29 2006/01/03 04:24:49 agaffney Exp $
+$Id: GLIPortage.py,v 1.30 2006/01/06 16:39:49 agaffney Exp $
 """
 
 import re
@@ -51,10 +51,27 @@ class GLIPortage(object):
 		if self._debug: self._logger.log("get_deps(): pkglist is " + str(pkglist))
 		return pkglist
 
+	def parse_vdb_contents(self, file):
+		entries = []
+		try:
+			vdbfile = open(file, "r")
+		except:
+			return entries
+		for line in vdbfile.readlines():
+			parts = line.strip().split(" ")
+			if parts[0] == "obj":
+				entries.append(parts[1])
+			elif parts[0] == "dir":
+				entries.append(parts[1] + "/")
+			elif parts[0] == "sym":
+				entries.append(" ".join(parts[1:4]))
+		entries.sort()
+		return entries
+
 	def copy_pkg_to_chroot(self, package, use_root=False):
-		symlinks = { '/bin/': '/mnt/livecd/bin/', '/boot/': '/mnt/livecd/boot/', '/lib/': '/mnt/livecd/lib/', 
-		             '/opt/': '/mnt/livecd/opt/', '/sbin/': '/mnt/livecd/sbin/', '/usr/': '/mnt/livecd/usr/',
-		             '/etc/gconf/': '/usr/livecd/gconf/' }
+		symlinks = { '/bin': '/mnt/livecd/bin/', '/boot': '/mnt/livecd/boot/', '/lib': '/mnt/livecd/lib/', 
+		             '/opt': '/mnt/livecd/opt/', '/sbin': '/mnt/livecd/sbin/', '/usr': '/mnt/livecd/usr/',
+		             '/etc/gconf': '/usr/livecd/gconf/' }
 
 		tmpdir = "/var/tmp/portage"
 		image_dir = tmpdir + "/" + package.split("/")[1] + "/image"
@@ -77,7 +94,7 @@ class GLIPortage(object):
 			raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not create image dir for " + package)
 
 		# Create list of files for tar to work with from CONTENTS file in vdb entry
-		entries = GLIUtility.parse_vdb_contents("/var/db/pkg/" + package + "/CONTENTS")
+		entries = self.parse_vdb_contents("/var/db/pkg/" + package + "/CONTENTS")
 		if not entries:
 			if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): no files for " + package + "...skipping tar and symlink fixup")
 		else:
@@ -87,9 +104,9 @@ class GLIPortage(object):
 				for entry in entries:
 					parts = entry.split(" ")
 					# Hack for symlink crappiness
-					for symlink in symlinks:
-						if parts[0].startswith(symlink):
-							parts[0] = symlinks[symlink] + parts[0][len(symlink):]
+#					for symlink in symlinks:
+#						if parts[0].startswith(symlink):
+#							parts[0] = symlinks[symlink] + parts[0][len(symlink):]
 					tarfiles.write(parts[0] + "\n")
 				tarfiles.close()
 			except:
@@ -100,15 +117,14 @@ class GLIPortage(object):
 			if not GLIUtility.exitsuccess(GLIUtility.spawn("tar -c --files-from=/tmp/tarfilelist --no-recursion 2>/dev/null | tar -C " + self._chroot_dir + image_dir + " -x")):
 				raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not execute tar for " + package)
 
-			# More symlink crappiness hacks
-			for symlink in symlinks:
-				if GLIUtility.is_file(self._chroot_dir + image_dir + symlinks[symlink]):
-					if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): fixing " + symlink + " symlink ickiness stuff in " + image_dir + " for " + package)
-					if os.path.islink(self._chroot_dir + image_dir + symlink):
-						if not GLIUtiltiy.exitsuccess(GLIUtility.spawn("rm " + self._chroot_dir + image_dir + symlink)):
-							raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not remove symlink " + symlink + " for " + package)
-					if not GLIUtility.exitsuccess(GLIUtility.spawn("mv " + self._chroot_dir + image_dir + symlinks[symlink] + " " + self._chroot_dir + image_dir + symlink)):
-						raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not fix " + symlink + " symlink ickiness for " + package)
+#			# More symlink crappiness hacks
+#			for symlink in symlinks:
+##				if GLIUtility.is_file(self._chroot_dir + image_dir + symlinks[symlink]):
+#				if os.path.islink(self._chroot_dir + image_dir + symlink):
+#					if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): fixing " + symlink + " symlink ickiness stuff in " + image_dir + " for " + package)
+#					GLIUtility.spawn("rm " + self._chroot_dir + image_dir + symlink)
+#					if not GLIUtility.exitsuccess(GLIUtility.spawn("mv " + self._chroot_dir + image_dir + symlinks[symlink] + " " + self._chroot_dir + image_dir + symlink)):
+#						raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not fix " + symlink + " symlink ickiness for " + package)
 
 		# Run pkg_setup
 		if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): running pkg_setup for " + package)
