@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.564 2006/01/06 04:39:05 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.565 2006/01/06 16:39:49 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  6 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility.py:
+  move parse_vdb_contents() to GLIPortage
+  src/GLIPortage.py:
+  remove all symlink fixups
 
   5 Jan 2006; Preston Cody <codeman@gentoo.org>
   AT: bootsplash is now gensplash
